--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,23 @@
        --color-charcoalGray: #666666;
        --color-Radical: #ff5252;
 }
-.swiper,
-.swiper-wrapper,
-.swiper-slide {
-  user-select: text !important;
-  -webkit-user-select: text !important;
+
+/* ----------------Wave Animation Custom Css------------------ */
+.wave {
+  display: inline-block;
+}
+
+.wave:hover {
+  animation: wave 2s infinite;
+}
+
+@keyframes wave {
+  0% { transform: rotate(0deg); }
+  15% { transform: rotate(14deg); }
+  30% { transform: rotate(-8deg); }
+  40% { transform: rotate(14deg); }
+  50% { transform: rotate(-4deg); }
+  60% { transform: rotate(10deg); }
+  70% { transform: rotate(0deg); }
+  100% { transform: rotate(0deg); }
 }
